fix layout problems

--- a/stylesJS.css
+++ b/stylesJS.css
@@ -37,7 +37,7 @@ a img {
   justify-content: center;
   align-items: center;
   padding: 0.5rem;
-  gap: 1.5rem;
+  gap: 1rem;
 }
 
 .country-details-container img {
@@ -88,6 +88,7 @@ a img {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 0.5rem;
 }
 
 .country-borders-codes {
@@ -107,4 +108,11 @@ a img {
 
 .border-a:hover {
   background-color: rgb(0, 0, 0, 0.10);
+}
+
+.languages-div {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+  align-items: center;
 }
